feat: implement services module
